--- a/ifolder/src/FormsTrayApp/Preferences.ja.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.ja.resx
@@ -4743,7 +4743,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>iFolderはiFolderサーバ {0} のIDを確認できません。このiFolderサーバの証明書が不明な認証局によって署名されています。{0} になりすましているサーバに接続している可能性があり、機密情報が危険にさらされるおそれがあります。この証明書を受け入れる前に、管理者に確認する必要があります。この証明書を永続的に受け入れて、接続を続行しますか?</value>
+		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
 	</data>
   
 	<data name="verifyCertTitle">
