--- a/ifolder/src/FormsTrayApp/FormsTrayApp.pl.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.pl.resx
@@ -943,7 +943,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>Program iFolder nie może zweryfikować tożsamości serwera iFolder {0}. Certyfikat tego serwera iFolder został podpisany przez nieznany ośrodek certyfikacji. Użytkownik może łączyć się z serwerem podszywającym się pod {0}, co niesie za sobą ryzyko ujawnienia poufnych informacji użytkownika.Â Â Przed zaakceptowaniem tego certyfikatu należy skontaktować się z administratorem systemu. Czy chcesz zaakceptować ten certyfikat na stałe i kontynuować łączenie?</value>
+		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
 	</data>
   
 	<data name="verifyCertTitle">
