--- a/ifolder/src/FormsTrayApp/FormsTrayApp.ru.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.ru.resx
@@ -943,7 +943,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>iFolder не удается проверить идентичность сервера iFolder {0}. Сертификат для данного сервера iFolder подписан неизвестной сертифицирующей организацией. Возможно, Вы подключаетесь к серверу, который выполняет функцию {0}, что может привести к потере конфиденциальной информации. Перед принятием данного сертификата необходимо проконсультироваться с администратором системы.  Вы действительно хотите принять данный сертификат и продолжить установку соединения?</value>
+		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
 	</data>
   
 	<data name="verifyCertTitle">
