--- a/ifolder/src/FormsTrayApp/Preferences.fr.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.fr.resx
@@ -4743,7 +4743,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>iFolder ne peut pas vérifier l'identité du serveur iFolder {0}. Le certificat de ce serveur a été signé par une autorité de certification inconnue. Il se peut que vous vous connectiez à un serveur qui se fait passer pour {0}. Cela peut présenter un risque pour vos informations confidentielles. Â Â Avant d'accepter ce certificat, vérifiez-en la validité auprès de votre administrateur système. Voulez-vous accepter ce certificat définitivement et poursuivre la connexion ?</value>
+		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
 	</data>
   
 	<data name="verifyCertTitle">
