--- a/ifolder/src/FormsTrayApp/Preferences.ru.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.ru.resx
@@ -4743,7 +4743,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>iFolder не может проверить подлинность сервера iFolder {0}. Сертификат для этого сервера iFolder подписан неизвестной сертифицирующей организацией. Возможно, Вы устанавливаете соединение с сервером, выдающим себя за {0}, что может подвергнуть риску конфиденциальную информацию. Перед принятием этого сертификата обратитесь к администратору системы. Вы хотите окончательно принять это сертификат и продолжить подключение?</value>
+		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
 	</data>
   
 	<data name="verifyCertTitle">
