--- a/ifolder/src/iFolderShell/MyMessageBox.de.resx
+++ b/ifolder/src/iFolderShell/MyMessageBox.de.resx
@@ -1043,6 +1043,6 @@
 	</data>
 	
 	<data name="hideDetails">
-		<value>(Details ausblenden)</value>
+		<value>Details ausblenden</value>
 	</data>
 </root>
