--- a/ifolder/src/FormsTrayApp/Preferences.zh-TW.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.zh-TW.resx
@@ -4743,7 +4743,7 @@
 	</data>
   
 	<data name="verifyCert">
-		<value>iFolder cannot verify the identity of the iFolder Server {0}.  The certificate for this iFolder Server was signed by an unknown certifying authority.  You might be connecting to a server that is pretending to be {0} which could put your confidential information at risk.  Before accepting this certificate, you should check with your system administrator.  Do you want to accept this certificate permanently and continue to connect?</value>
+		<value>iFolder 無法驗證「iFolder 伺服器 {0}」的身份。此「iFolder 伺服器」的憑證由不明證書權限簽署。您可能正連接至偽裝成 {0} 的伺服器，這樣會使機密資訊存在風險。在接受此憑證之前，應先洽詢系統管理員。您要永久接受此憑證並繼續連接嗎？</value>
 	</data>
   
 	<data name="verifyCertTitle">
