1. Changed message in balloon (https://bugzilla.novell.com/show_bug.cgi?id=96094 and https://bugzilla.novell.com/show_bug.cgi?id=97274)
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5240 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -713,7 +713,7 @@
     <value>Read-only iFolder prevented synchronization: {0}</value>
   </data>
   <data name="readOnlyFailureInfo">
-    <value>You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.  Click here to view the iFolder Synchronization Log.</value>
+    <value>You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.  Click here to view the Synchronization Log.</value>
   </data>
   <data name="quotaFailure">
     <value>Full iFolder prevented synchronization: {0}</value>
@@ -722,7 +722,7 @@
     <value>Incomplete Synchronization: {0}</value>
   </data>
   <data name="quotaFailureInfo">
-    <value>The iFolder is full.  Click here to view the iFolder Synchronization Log.</value>
+    <value>The iFolder is full.  Click here to view the Synchronization Log.</value>
   </data>
   <data name="policySizeFailure">
     <value>Size restriction policy prevented synchronization: {0}</value>
