--- a/ifolder/src/FormsTrayApp/FormsTrayApp.it.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.it.resx
@@ -914,8 +914,24 @@
 		<value>Cartella iFolder bloccata. Sincronizzazione non eseguita: {0}</value>
 	</data>
   
+	<data name="readOnlyFailure">
+		<value>Read-only iFolder prevented synchronization: {0}</value>
+	</data>
+  
+	<data name="readOnlyFailureInfo">
+		<value>You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.  Click here to view the Synchronization Log.</value>
+	</data>
+  
 	<data name="quotaFailure">
 		<value>Cartella iFolder piena. Sincronizzazione non eseguita: {0}</value>
+	</data>
+  
+	<data name="quotaFailureTitle">
+		<value>Incomplete Synchronization: {0}</value>
+	</data>
+  
+	<data name="quotaFailureInfo">
+		<value>The iFolder is full.  Click here to view the Synchronization Log.</value>
 	</data>
   
 	<data name="policySizeFailure">
