--- a/ifolder/src/iFolderShell/NewiFolder.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.resx
@@ -371,7 +371,7 @@
     <value>NoControl</value>
   </data>
   <data name="iFolderOverview.LinkArea" type="System.Windows.Forms.LinkArea, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>182, 17</value>
+    <value>182, 11</value>
   </data>
   <data name="iFolderOverview.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>72, 16</value>
@@ -386,7 +386,7 @@
     <value>0</value>
   </data>
   <data name="iFolderOverview.Text">
-    <value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see Managing iFolders in iFolder Help.</value>
+    <value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
   </data>
   <data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>TopLeft</value>
@@ -496,7 +496,10 @@
   <data name="&gt;&gt;$this.Type">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-	<data name="saveConfigError">
-		<value>An error was encountered while saving configuration.</value>
-	</data>
+  <data name="saveConfigError">
+    <value>An error was encountered while saving configuration.</value>
+  </data>
+  <data name="[hyperlink]">
+    <value>Managing iFolders</value>
+  </data>
 </root>
