--- a/ifolder/src/iFolderShell/NewiFolder.hu.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.hu.resx
@@ -463,7 +463,7 @@
 	</data>
   
 	<data name="iFolderOverview.LinkArea" type="System.Windows.Forms.LinkArea, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<value>182, 17</value>
+		<value>182, 11</value>
 	</data>
   
 	<data name="iFolderOverview.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>A kiválasztott mappa mostantól iFolder, és az iFolder embléma különbözteti meg a többi mappától. Az iFolder használatáról és más felhasználókkal való megosztásáról az iFolder súgójának az iFolder mappák kezeléséről szóló fejezete tartalmaz tájékoztatást.</value>
+		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -629,8 +629,12 @@
 	<data name="&gt;&gt;$this.Type">
 		<value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	
+  
 	<data name="saveConfigError">
 		<value>Hiba történt a konfiguráció mentésekor.</value>
+	</data>
+  
+	<data name="[hyperlink]">
+		<value>Managing iFolders</value>
 	</data>
 </root>
