--- a/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
+++ b/ifolder/src/iFolderShell/NewiFolder.zh-CN.resx
@@ -463,7 +463,7 @@
 	</data>
   
 	<data name="iFolderOverview.LinkArea" type="System.Windows.Forms.LinkArea, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-		<value>182, 17</value>
+		<value>182, 11</value>
 	</data>
   
 	<data name="iFolderOverview.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -483,7 +483,7 @@
 	</data>
   
 	<data name="iFolderOverview.Text">
-		<value>所选文件夹现在是 iFolder，它与有 iFolder 符号的其它文件夹不同。要了解有关使用 iFolder 和与其它用户共享 iFolder 的详细信息，请参见“iFolder 帮助”中的“管理 iFolder”。</value>
+		<value>The selected folder is now an iFolder, and is distinguished from other folders with the iFolder emblem.  To learn more about using iFolder and sharing iFolders with other users, see [hyperlink] in iFolder Help.</value>
 	</data>
   
 	<data name="iFolderOverview.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -629,8 +629,12 @@
 	<data name="&gt;&gt;$this.Type">
 		<value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</data>
-	
+  
 	<data name="saveConfigError">
 		<value>保存配置时出现错误。</value>
+	</data>
+  
+	<data name="[hyperlink]">
+		<value>Managing iFolders</value>
 	</data>
 </root>
