1. Left-click now brings up the iFolders dialog (fix for https://bugzilla.novell.com/show_bug.cgi?id=118894). 2. Made Accounts/Preferences and Sync Log accessible via menu item in iFolders dialog (fix for https://bugzilla.novell.com/show_bug.cgi?id=119523). 3. Changed initial prompt to create account to a notification balloon.
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5352 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -749,9 +749,9 @@
     <value>Unable to Verify Identity</value>
   </data>
   <data name="createAccount">
-    <value>To begin using iFolder, you must first set up an iFolder account.  Would you like to set up an iFolder account now?</value>
+    <value>To begin using iFolder, you must first set up an iFolder account.  Click here to add a new account.</value>
   </data>
   <data name="createAccountTitle">
-    <value>Set Up iFolder Account</value>
+    <value>Welcome to iFolder</value>
   </data>
 </root>
