1. Display domain name in "Checking for new iFolders" message (fix for https://bugzilla.novell.com/show_bug.cgi?id=121665).
git-svn-id: svn://svn.code.sf.net/p/simias/code/branches/R3OESSP2RC1_BR@5363 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -644,10 +644,10 @@
     <value>Unable to Connect to iFolder Server</value>
   </data>
   <data name="checkingForiFolders">
-    <value>Checking for new iFolders...</value>
+    <value>Checking for new iFolders on: {0}</value>
   </data>
   <data name="doneCheckingForiFolders">
-    <value>Done checking for new iFolders</value>
+    <value>Done checking for new iFolders: {0}</value>
   </data>
   <data name="localSync">
     <value>Checking for changes: {0}</value>
