--- a/ifolder/src/FormsTrayApp/FormsTrayApp.de.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.de.resx
@@ -827,11 +827,11 @@
 	</data>
   
 	<data name="checkingForiFolders">
-		<value>Neue iFolder-Ordner werden gesucht...</value>
+		<value>Checking for new iFolders on: {0}</value>
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Suche nach neuen iFolder-Ordnern abgeschlossen</value>
+		<value>Done checking for new iFolders: {0}</value>
 	</data>
   
 	<data name="localSync">
@@ -967,10 +967,10 @@
 	</data>
   
 	<data name="createAccount">
-		<value>Um iFolder verwenden zu können, müssen Sie zuerst ein iFolder-Konto einrichten. Möchten Sie jetzt ein iFolder-Konto einrichten?</value>
+		<value>To begin using iFolder, you must first set up an iFolder account.  Click here to add a new account.</value>
 	</data>
   
 	<data name="createAccountTitle">
-		<value>iFolder-Konto einrichten</value>
+		<value>Welcome to iFolder</value>
 	</data>
 </root>
