--- a/ifolder/src/FormsTrayApp/FormsTrayApp.es.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.es.resx
@@ -827,11 +827,11 @@
 	</data>
   
 	<data name="checkingForiFolders">
-		<value>Buscando carpetas iFolder nuevas...</value>
+		<value>Checking for new iFolders on: {0}</value>
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Búsqueda de carpetas iFolder nuevas finalizada</value>
+		<value>Done checking for new iFolders: {0}</value>
 	</data>
   
 	<data name="localSync">
@@ -967,10 +967,10 @@
 	</data>
   
 	<data name="createAccount">
-		<value>Para utilizar iFolder, en primer lugar debe configurar una cuenta iFolder. ¿Desea configurarla ahora?</value>
+		<value>To begin using iFolder, you must first set up an iFolder account.  Click here to add a new account.</value>
 	</data>
   
 	<data name="createAccountTitle">
-		<value>Configurar cuenta iFolder</value>
+		<value>Welcome to iFolder</value>
 	</data>
 </root>
