--- a/ifolder/src/FormsTrayApp/FormsTrayApp.pt.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.pt.resx
@@ -827,11 +827,11 @@
 	</data>
   
 	<data name="checkingForiFolders">
-		<value>Verificando novas pastas do iFolder...</value>
+		<value>Checking for new iFolders on: {0}</value>
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Concluída a verificação de novas pastas do iFolder</value>
+		<value>Done checking for new iFolders: {0}</value>
 	</data>
   
 	<data name="localSync">
@@ -967,10 +967,10 @@
 	</data>
   
 	<data name="createAccount">
-		<value>Para começar a usar o iFolder, primeiro é preciso configurar uma conta do iFolder. Deseja configurar uma conta do iFolder agora?</value>
+		<value>To begin using iFolder, you must first set up an iFolder account.  Click here to add a new account.</value>
 	</data>
   
 	<data name="createAccountTitle">
-		<value>Configurar Conta do iFolder</value>
+		<value>Welcome to iFolder</value>
 	</data>
 </root>
