updating localized files
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5380 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.cs.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.cs.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Kontrola nových složek iFolder je dokončena</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Neúplná synchronizace</value>
 	</data>
   
 	<data name="quotaFailureInfo">
