--- a/ifolder/src/FormsTrayApp/FormsTrayApp.es.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.es.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Búsqueda de carpetas iFolder nuevas finalizada</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Sincronización incompleta</value>
 	</data>
   
 	<data name="quotaFailureInfo">
