--- a/ifolder/src/FormsTrayApp/FormsTrayApp.hu.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.hu.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Az új iFolder mappák keresése befejeződött</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Befejezetlen szinkronizálás</value>
 	</data>
   
 	<data name="quotaFailureInfo">
