--- a/ifolder/src/FormsTrayApp/FormsTrayApp.pl.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.pl.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Wyszukiwanie nowych iFolderów zakończone</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Synchronizacja niepełna</value>
 	</data>
   
 	<data name="quotaFailureInfo">
