--- a/ifolder/src/FormsTrayApp/FormsTrayApp.pt.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.pt.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Concluída a verificação de novas pastas do iFolder</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Sincronização incompleta</value>
 	</data>
   
 	<data name="quotaFailureInfo">
