--- a/ifolder/src/FormsTrayApp/FormsTrayApp.sk.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.sk.resx
@@ -831,7 +831,7 @@
 	</data>
   
 	<data name="doneCheckingForiFolders">
-		<value>Done checking for new iFolders: {0}</value>
+		<value>Zisťovanie nových priečinkov iFolder je dokončené</value>
 	</data>
   
 	<data name="localSync">
@@ -927,7 +927,7 @@
 	</data>
   
 	<data name="quotaFailureTitle">
-		<value>Incomplete Synchronization: {0}</value>
+		<value>Neukončená synchronizácia</value>
 	</data>
   
 	<data name="quotaFailureInfo">
